fix: Fix layout warnings and RTL (#1303)
* fix: Fix layout warnings and RTL

Fix the layout warnings, RTL support and add tools attribute for development aide

Fixes #1296

* Resolve merge conflicts on layout

--- a/android/app/src/main/res/layout/activity_locations.xml
+++ b/android/app/src/main/res/layout/activity_locations.xml
@@ -38,7 +38,8 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recyclerView_locations"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            tools:listitem="@layout/item_location" />
 
     </LinearLayout>
 </LinearLayout>
