--- a/android/app/src/main/res/layout/item_sponsor.xml
+++ b/android/app/src/main/res/layout/item_sponsor.xml
@@ -1,4 +1,5 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
@@ -24,7 +25,8 @@
             android:layout_gravity="center"
             android:gravity="center"
             android:textSize="@dimen/text_size"
-            android:textStyle="bold|italic" />
+            android:textStyle="bold|italic"
+            tools:text="Sponsor Type" />
     </LinearLayout>
 
     <View
