--- a/android/app/src/main/res/layout/item_track.xml
+++ b/android/app/src/main/res/layout/item_track.xml
@@ -6,8 +6,7 @@
     android:baselineAligned="false"
     android:clickable="true"
     android:focusable="true"
-    android:orientation="vertical"
-    tools:showIn="@layout/list_tracks">
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -18,17 +17,17 @@
 
         <ImageView
             android:id="@+id/imageView"
-            android:contentDescription="@string/item_track"
             android:layout_width="50dp"
-            android:layout_height="50dp" />
+            android:layout_height="50dp"
+            android:contentDescription="@string/item_track" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginEnd="@dimen/layout_margin_large"
             android:layout_marginLeft="@dimen/layout_margin_large"
             android:layout_marginRight="@dimen/layout_margin_large"
             android:layout_marginStart="@dimen/layout_margin_large"
-            android:layout_marginEnd="@dimen/layout_margin_large"
             android:gravity="center"
             android:orientation="vertical">
 
