--- a/android/app/src/main/res/layout/item_location.xml
+++ b/android/app/src/main/res/layout/item_location.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:baselineAligned="false"
@@ -17,14 +18,16 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/primary_text"
-            android:textSize="@dimen/heading_text_size" />
+            android:textSize="@dimen/heading_text_size"
+            tools:text="Location Name" />
 
         <TextView
             android:id="@+id/location_floor"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/secondary_text"
-            android:textSize="@dimen/text_size"/>
+            android:textSize="@dimen/text_size"
+            tools:text="Location Floor" />
     </LinearLayout>
 
     <View
