--- a/android/app/src/main/res/layout/item_speaker.xml
+++ b/android/app/src/main/res/layout/item_speaker.xml
@@ -17,10 +17,10 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:layout_gravity="bottom"
-        android:background="?colorPrimaryDark"
         android:alpha="0.8"
+        android:background="?colorPrimaryDark"
+        android:orientation="vertical"
         android:padding="@dimen/padding_extra_small">
 
         <TextView
@@ -32,7 +32,7 @@
             android:textColor="@android:color/white"
             android:textSize="@dimen/text_size_small"
             tools:ignore="SpUsage"
-            tools:text="Paresh Mayani" />
+            tools:text="Speaker Name" />
 
         <TextView
             android:id="@+id/speakers_list_designation"
@@ -43,7 +43,7 @@
             android:textColor="@android:color/white"
             android:textSize="@dimen/text_size_small"
             tools:ignore="SpUsage"
-            tools:text="Technical Lead" />
+            tools:text="Designation" />
 
         <TextView
             android:id="@+id/speakers_list_country"
@@ -54,7 +54,7 @@
             android:textColor="@android:color/white"
             android:textSize="@dimen/text_size_small"
             tools:ignore="SpUsage"
-            tools:text="India" />
+            tools:text="Country" />
 
     </LinearLayout>
 </FrameLayout>
