--- a/android/app/src/main/res/layout/item_sponsor_type.xml
+++ b/android/app/src/main/res/layout/item_sponsor_type.xml
@@ -1,9 +1,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
     android:background="?attr/selectableItemBackground"
+    android:orientation="vertical"
     android:padding="@dimen/padding_large">
+
     <View
         android:id="@+id/separator"
         android:layout_width="match_parent"
@@ -14,8 +16,9 @@
         android:id="@+id/sponsor_category"
         android:layout_width="79dp"
         android:layout_height="match_parent"
-        android:textStyle="bold|italic"
+        android:layout_gravity="center"
         android:textSize="@dimen/text_size"
-        android:layout_gravity="center" />
+        android:textStyle="bold|italic"
+        tools:text="Sponsor" />
 
 </LinearLayout>
