--- a/android/app/src/main/res/layout/list_locations.xml
+++ b/android/app/src/main/res/layout/list_locations.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white">
@@ -22,6 +23,7 @@
             android:id="@+id/list_locations"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:scrollbars="vertical" />
+            android:scrollbars="vertical"
+            tools:listitem="@layout/item_location" />
     </android.support.v4.widget.SwipeRefreshLayout>
 </RelativeLayout>
