--- a/android/app/src/main/res/layout/list_schedule.xml
+++ b/android/app/src/main/res/layout/list_schedule.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/window_frame"
-    android:background="@color/white"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/white">
 
     <TextView
         android:id="@+id/txt_no_schedule"
@@ -25,6 +26,7 @@
             android:layout_height="wrap_content"
             android:clipToPadding="false"
             android:paddingBottom="30dp"
-            android:scrollbars="vertical" />
+            android:scrollbars="vertical"
+            tools:listitem="@layout/item_schedule" />
     </android.support.v4.widget.SwipeRefreshLayout>
 </RelativeLayout>
