--- a/android/app/src/main/res/layout/list_speakers.xml
+++ b/android/app/src/main/res/layout/list_speakers.xml
@@ -2,9 +2,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/ll_speakers"
-    android:background="@color/white"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/white">
 
     <TextView
         android:id="@+id/txt_no_speakers"
@@ -25,11 +25,11 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:clipToPadding="false"
-            tools:listitem="@layout/item_speaker"
             android:columnWidth="@dimen/widget_default_height"
             android:padding="@dimen/padding_small"
             android:visibility="gone"
-            tools:visibility="visible"/>
+            tools:listitem="@layout/item_speaker"
+            tools:visibility="visible" />
 
     </android.support.v4.widget.SwipeRefreshLayout>
 </RelativeLayout>
