--- a/android/app/src/main/res/layout/list_tracks.xml
+++ b/android/app/src/main/res/layout/list_tracks.xml
@@ -2,9 +2,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/tracks_frame"
-    android:background="@color/white"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/white">
 
     <TextView
         android:id="@+id/txt_no_tracks"
@@ -24,8 +24,8 @@
             android:id="@+id/list_tracks"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            tools:listitem="@layout/item_track"
             android:clipToPadding="false"
-            android:scrollbars="vertical"/>
+            android:scrollbars="vertical"
+            tools:listitem="@layout/item_track" />
     </android.support.v4.widget.SwipeRefreshLayout>
 </RelativeLayout>
