--- a/android/app/src/main/res/xml/settings.xml
+++ b/android/app/src/main/res/xml/settings.xml
@@ -21,6 +21,7 @@
         <ListPreference
             android:defaultValue="@string/default_mode_notification"
             android:dialogTitle="@string/settings_mode_notification"
+            android:title="Interval"
             android:entries="@array/notification_mode_values"
             android:entryValues="@array/notification_mode_values"
             android:key="@string/notification_key" />
