fix: Fix drawer layout lag (#1330)
Use hardware acceleration and fixed navigation bar width to fix lag

--- a/android/app/src/main/res/values/dimens.xml
+++ b/android/app/src/main/res/values/dimens.xml
@@ -42,4 +42,7 @@
     <!--ProgressBar-->
     <dimen name="top_progressbar_margin">-10dp</dimen>
     <dimen name="bottom_progressbar_margin">-6dp</dimen>
+
+    <!--NavBar-->
+    <dimen name="nav_bar_width">300dp</dimen>
 </resources>
